# blacksiren

./: Android.mk  Application.mk  CMakeLists.txt  README.md  android.config  java.mk  siren_config.mk  siren_enable_flags.mk  test.cpp  version
cmake/: readme.md
doc/: siren api.md  siren design.md
include/: .sutils.h.swp  common.h  easyr2_queue.h  isiren.h  lfqueue.h  os.h  phoneme.h  siren.h  siren_alg.h  siren_alg_legacy_helper.h  siren_base.h  siren_channel.h  siren_config.h  siren_config_if.h  siren_net.h  siren_preprocessor.h  siren_processor.h  siren_proxy.h  sutils.h
include/legacy/: AELearning.h  r2ad1.h  r2ad2.h  r2ad3.h  r2math.h  r2mem_aec.h  r2mem_aec_fix.h  r2mem_agc.h  r2mem_bf.h  r2mem_buff.h  r2mem_buff_f.h  r2mem_cod.h  r2mem_i.h  r2mem_ns.h  r2mem_o.h  r2mem_rdc.h  r2mem_realsl2.h  r2mem_rs2.h  r2mem_sl3.h  r2mem_slbf2.h  r2mem_vad.h  r2mem_vad2.h  r2mem_vbv2.h  r2mem_vbv3.h  r2mem_vt.h  zrsapi.h  zslapi.h  zvbvapi.h  zvtapi.h
include/neo/: siren_mic.h
java/com/rokid/openVoice/: BlackSiren.java
java/jni/: Android.mk  arm.mk  arm64.mk  com_rokid_openVoice_BlackSiren.cpp
resource/: blacksiren.json
resource/cn/: dnn.txt  nnet_iter08_lr3.125e-07_tr97.15_cv95.37  r2ssp.cfg  vt.new.cfg
resource/en/: en.tri3a.hmms.fix  r2ssp.cfg
resource/mini/: blacksiren.json
resource/nana_6_2/: blacksiren.json
resource/nana_6_2/en/: r2ssp.cfg  vt.cfg
resource/pebble/: blacksiren.json  blacksiren_c.json  blacksiren_i2s.json  blacksiren_xmos.json
resource/pebble/cn/: final.ruoqi.mod  sn.mat  vt.new.cfg
resource/pebble/en/: vt.new.cfg
resources/: Android.mk  blacksiren.json
resources/cn/: cn.tri3a.hmms.fix  hmm  hotwords.txt
resources/en/: vt.new.cfg
src/: CMakeLists.txt  easyr2_queue.cpp  lfqueue.cpp  os_unix.cpp  siren.cpp  siren_alg.cpp  siren_base.cpp  siren_channel.cpp  siren_config.cpp  siren_net.cpp  siren_preprocessor.cpp  siren_processor.cpp  siren_proxy.cpp  sutils.cpp
src/legacy/: AELearning.cpp  r2math.cpp  r2mem_aec.cpp  r2mem_aec_fix.cpp  r2mem_agc.cpp  r2mem_bf.cpp  r2mem_buff.cpp  r2mem_buff_f.cpp  r2mem_cod.cpp  r2mem_i.cpp  r2mem_ns.cpp  r2mem_o.cpp  r2mem_rdc.cpp  r2mem_realsl2.cpp  r2mem_rs2.cpp  r2mem_sl3.cpp  r2mem_slbf2.cpp  r2mem_vad.cpp  r2mem_vad2.cpp  r2mem_vbv2.cpp  r2mem_vbv3.cpp  r2mem_vt.cpp
src/neo/: siren_mic.cpp
